--- a/css/header.css
+++ b/css/header.css
@@ -7,7 +7,6 @@
 
     @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato&display=swap');
 
-
     * {
         padding: 0;
         margin: 0;
@@ -127,7 +126,8 @@
 
     .signup-btn a{
         padding: 10px 13px;
-        background-color: hsl(158, 94%, 36%);
+        /* background-color: hsl(158, 94%, 36%); */
+        background-color: #20B2AA;
         color: var(--LIGHT-COLOR);
         font-family: var(--FF-CAPTION);
         text-decoration: none;
