--- a/css/login.css
+++ b/css/login.css
@@ -57,3 +57,9 @@
 .welcom-msg {
     color: var(--ORANGE-COLOR);
 }
+
+@media screen and (min-width:780px) {
+    .signup-container {
+        width: 50%;
+    }
+}
