--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@ body {
 .about_container { grid-area: abtcontain; }
 
 .abtimage {
-    background-image: url("/HomePage/img/image5.jpg");
+    background-image: url("image5.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
@@ -395,10 +395,10 @@ body {
 
 
 
-.scroll-txt span{
+.scroll-txt span{ 
     color: hsl(0 0% 100% / 0.2);
-    background-image: linear-gradient(90deg, blue,red);
-    /* background-image: linear-gradient(90deg, white, white); */
+    /* background-image: linear-gradient(90deg, blue,red); */
+    background-image: linear-gradient(90deg, white, white);
     background-clip: text;
     background-size: 0% 100%;
     background-repeat: no-repeat;
@@ -418,9 +418,39 @@ body {
 }
 
 
-/* || OFFER PART */
+/*********** OFFER PART ************/
 
-.offer-card-cont {
+.offer-cont {
+    margin-top: 1em;
+    width: 100%;
+    height: 100vh;
+    background-image: url("img/homeimg/image6.jpg");
+}
+.offer-header h1 {
+    font-family: var(--ABT-FONT);
+    color: var(--ORANGE-COLOR);
+    text-align: center;
+    font-size: 5em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .offer-card-cont {
     display: grid;
     width: 100%;
     justify-content: center;
@@ -515,10 +545,10 @@ body {
         padding-left: 4.2em;
     }
     
-}
+} */
 
 /* Read More button */
-.card-inner-cont {
+/* .card-inner-cont {
     position: relative;
 }
 .morebtn {
@@ -535,14 +565,20 @@ body {
     background-color: var(--NAV-BACK-COLOR);
     padding: 11px 12px;
     font-family: var(--ABT-FONT);
-}
-
+} */
+/* 
 .morebtn a:hover {
     background-image: radial-gradient(90deg, orange, red);
     background-color: var(--ORANGE-COLOR);
     transition: 0.6s;
-}
+} */
 
+
+
+
+
+
+/**************** CLIENTS/BRANDS  *******************/
 .brand-abt {
     text-align: center;
     margin-top: 5em;
