--- a/css/style.css
+++ b/css/style.css
@@ -424,13 +424,14 @@ body {
     margin-top: 1em;
     width: 100%;
     height: 100vh;
-    background-image: url("img/homeimg/image6.jpg");
+    background-image: url("bg.jpg");
 }
 .offer-header h1 {
     font-family: var(--ABT-FONT);
     color: var(--ORANGE-COLOR);
     text-align: center;
     font-size: 5em;
+    /* margin-top: 1em; */
 }
 
 
