--- a/signUp.css
+++ b/signUp.css
@@ -48,7 +48,7 @@
 input[type=password],
 input[type=email],
 input[type=tel] {
-    width: 1000%;
+    width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
     display: inline-block;
@@ -158,9 +158,11 @@ input[type=email]:focus{
 .form-body {
     padding: 1em;
 }
-
+/* 
 @media screen and (max-width: 600px) {
     .signup-container {
         width: 60% !important;
     }
-}
+} */
+
+
