--- a/css/userAdmin.css
+++ b/css/userAdmin.css
@@ -29,11 +29,6 @@
     /* header content */
     --ORANGE-COLOR: rgb(228, 151, 6); 
 }
-* {
-    /* padding: 0; */
-    /* margin: 0; */
-    /* box-sizing: border-box; */
-}
 
 .user_interface_container {
     display: flex;
@@ -44,7 +39,6 @@
     flex: 30%;
     height: 79vh;
     background-color: lightgrey;
-    /* opacity: 0.5; */
 }
 
 .user_details {
@@ -57,11 +51,14 @@
     border-radius: 20px;
     margin: 3em;
 }
-.details_cont_user h3 {
+.details_cont_user h4 {
     text-align: center;
+    padding: 0.6em;
+    background-color: #c2d7ff;
+    border-radius: 10px;
     font-family: var(--ABT-FONT);
-    color: var(--NAV-BACK-COLOR);
-    text-decoration: underline var(--ORANGE-COLOR);
+    color: blue;
+    border: 1px solid blue;
 }
 .details_cont_user p {
     margin-bottom: 0.5rem;
@@ -124,3 +121,4 @@
     justify-content: center;
     align-items: center;
 }
+
