--- a/css/managerAdmintest.css
+++ b/css/managerAdmintest.css
@@ -86,3 +86,26 @@ body {
 .customer_info_container {
     background-color: rgb(241, 239, 239);
 }
+
+.create__btn {
+    display: inline-block;
+    text-decoration: none;
+    color: var(--LIGHT-COLOR);
+    padding: 6px 13px;
+    border-radius: 5px;
+    font-family: var(--ABT-FONT);
+    font-size: 300;
+    background-color: rgb(0, 0, 255);
+}
+
+.create__btn:hover {
+    background-color: rgba(0, 0, 255, 0.7);
+}
+
+.customer_info_container {
+    box-shadow: 10px 5px 13px lightgray;
+    border-radius: 10px;
+    /* margin-bottom: 1rem; */
+    /* background-color: lightgray; */
+}
+
