--- a/css/style.css
+++ b/css/style.css
@@ -423,7 +423,7 @@ body {
 .offer-cont {
     margin-top: 1.5em;
     width: 100%;
-    height: 30vh;
+    /* height: 30vh; */
     background-image: url("bg.jpg");
 }
 .offer-header h1 {
@@ -437,7 +437,7 @@ body {
 /******** SERVICE CARD **********/
 .service_card_container {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 
